app/common/css/tablet.css
/* ... */
input.formbutton {
  -webkit-appearance: none;
  display: inline-block;
	color: #fff;
	font-weight: bold;
	font-size: 94.12%;
	line-height: 26px;  /* height minus padding */
	text-decoration: none;
	padding: 5px 5px 5px 12px;
	margin-right: 0;
  border: none;
	height: 36px;
	background-color: transparent;
	background-image: url(/common/images/button-sd-l.png);
	background-repeat: no-repeat;
	background-position: center left;
	-webkit-border-radius: 0px;
}
.formbuttonclose {
  display: inline-block;
	background-color: transparent;
	background-image: url(/common/images/button-sd-r.png);
	background-repeat: no-repeat;
	background-position: center right;
	margin: 0;
	height: 36px;
	padding-right: 7px;
}

.radiobutton {
	width: 24px;
	height: 24px;
	margin-right: 5px;
	margin-left: 0;
	margin-bottom: 8px;
	vertical-align: -12%;
	-webkit-border-radius: 12px;
}

.required {
	font-weight: bold;
	color: #900;
}

/* Top navigation/titlebar */

#navbar {
	height: 50px;
	margin: 0;
	line-height: 48px;
	overflow: hidden;
	position: relative;
}

.breadcrumbs {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
	height: 100%;
}

.breadcrumbs a {
	display: inline-block;
	height: 100%;
	line-height: 50px;
	vertical-align: top;
  margin-left: -4px; /* overlap by the width of the drillup art */
  padding: 0 22px 0 4px; 
  background-image: url(/common/images/drillup-r.png);
	background-repeat: no-repeat;
	background-position: top right;
	text-decoration: none;
	overflow: hidden;
	text-overflow: ellipsis;
}

*:first-child+html .breadcrumbs a {
	/* The return of IE CSS hacks makes me mad */
  margin-left: -5px; 	/* +3px vs normal */
	padding-right: 16px;
}

a.homelink {
    background-image: none;
    margin-left: -2px;
    margin-right: -5px;
    padding: 0!important;	/* !important necessitated by IE for WP7 grrr */
    width: 74px;
}

.breadcrumbs a.homelink img {
    padding: 0;
}

a.module img {
	padding: 10px 2px 8px 4px;
}

.homepage .moduleicon {
    padding: 10px 7px 8px 6px;
}

*:first-child+html .homepage .moduleicon {
	/* The return of IE CSS hacks makes me mad */
	padding-left: 3px;
	float: left;
}

.crumb1 {
	max-width: 250px;
}

.crumb2a  {
	max-width: 250px;
}

.crumb2b  {
	max-width: 250px;
}

.crumb3a {
	max-width: 200px;
}

.crumb3b {
	max-width: 200px;
}

.crumb3c {
	max-width: 250px;
}
.crumb3c + .crumb3c {
	display: none;
}

.pagetitle {
	display: inline-block;
	font-weight: bold;
	margin-left: -4px;
	padding-left: 4px;
	vertical-align: top;
	line-height: 50px;
	height: 50px;
}

*:first-child+html .pagetitle {
	/* The return of IE CSS hacks makes me cry */
	margin-left: -3px;	
}

.homepage .pagetitle {
	display: inline;
	max-width: 210px;
	margin-left: -8px;	
}

.homepage .pagetitle {
	max-width: 210px;
}

.help {
	position: absolute;
	top: 0px;
	right: 0px;
	width: 52px;
}

#navbar.helpon {
    padding-right: 46px;
}

/* Springboards */

.springboard {
	margin: 0 auto;
	padding: 5px;
	margin-left: 2px;
	clear: both;
}

.springboard div {
	position: relative;
	margin: 0;
	padding: 0;
	border: 0;
	float: left;
	text-align: center;		
	vertical-align: top;
}

.springboard a {
	display: block;
	text-decoration: none;
	padding: 8px 5px;
	word-wrap: normal;
}

.springboard a img {
	height: 50px;
	width: 50px;
	margin-bottom: 1px;
}

.springboard .separator {
	display: block;
	width: 100%;
	height: 18px;
	clear:both;
	margin: 0;
	padding: 0;
	float: none;
}
.springboard .badge {
	position: absolute;
	right: 12px;
	top: 5px;
	width: 24px;
	height: 24px;
	padding-top: 5px;
	text-align: center;
	color: #fff;
	font-size:70.59%;
	font-weight: bold;
	background-image: url(/common/images/badge.png);
	background-repeat: no-repeat;
}

/* Navigation and results listings */

.nav {	   
	padding: 0;	   
	margin: 9px 12px; 
	border: 1px solid #ccc;
	-webkit-border-radius: 9px;	
	border-radius: 9px;	
}

.nav li {	
	list-style-type: none;	
	border-top: 1px solid #ccc;
	padding: 11px;
	position: relative;
}

.nav li:first-child {
	border-top:0; 
}

.nav li div.smallprint {
  padding-top: 2px;
}

.nav span.nolink {
	display: block;
	padding: 8px;
	margin: -8px;	 
	background-repeat: no-repeat;
	background-position: right; 
	line-height: 1.2em;
	text-decoration: none;
	-webkit-border-radius: 5px;	
}

.nav a  {
	display: block;
	padding: 8px 24px 10px 8px;
	margin: -8px;	 
	background-image: url(/common/images/action-arrow.png); 
	background-repeat: no-repeat;
	background-position: right; 
	line-height: 1.2em;
	text-decoration: none;
	-webkit-border-radius: 5px;	
}

.nav li.icon {
  padding: 0 11px;
  min-height: 54px;
}
.nav li.icon img {
  position: absolute;
  top: 2px;
  left: 0;
  height: 50px;
  width: 50px;
}
.nav li.icon a {
  position: relative;
  margin: 0 -7px 0 0;
  padding: 11px 4px 11px 57px;
  line-height: 30px;
}

.nav h2, .nav h3 {
	margin-bottom: 0;
}

.focal .nav {
	margin: 10px -13px;
	-webkit-border-radius: 0px;	
}

ul.focal {
	list-style-type: none;
	padding: 0;
}

ul.focal li {
	list-style-type: none;
	padding: 11px;
	position: relative;
	border-top: 1px solid #ccc; 
}

ul.focal li:first-child {
	border-top:0; 
}

.tabbody .nav {
	margin: 0 -8px;
	border: none;
	-webkit-border-bottom-right-radius: 8px;	
	-webkit-border-bottom-left-radius: 8px;	
}

.tabbody .results {
	margin: 8px 4px 0 4px;
	border-width: 1px 0 0 0;
	-webkit-border-bottom-right-radius: 8px;	
	-webkit-border-bottom-left-radius: 8px;	
}

.tabbody .nested {
	margin: 0px;
	border: 1px solid #ccc;
}

.tabbody .nested li {
	padding: 10px;
}

.results {	   
	padding: 0;	   
	margin: 10px 0; 
	border-top: 1px solid #ccc;
	border-bottom: 1px solid #ccc;
}

.results li {	
	list-style-type: none;		
	border-top: 1px solid #ccc;
	padding: 10px;
}

.results li:first-child {
	border-top:0; 
}
/* ... */

